--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Prathamesh Gunde</span>
           <br />
-          I'm the Full Stack Developer.
+          I'm a Full Stack Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -76,11 +76,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a Solution Developer at Tata Technologies with good
-                knowledge of front-end as well as back-end technologies.
+                I am working as a Software Engineer at Scalereal with 2.7 years of experience in building web applications (using ReactJS, Redux, Typescript & Javascript).
               </p>
               <p class="about-wrapper__info-text">
-                I love refactoring web applications. I like working in a team.
+                I have worked on few backend applications as well (Using NodeJS & ExpressJS).
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -238,7 +237,7 @@
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            Let's get connect for the best resource
+            Let's get connected for the best resource
           </p>
           <a
             target="_blank"
